[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "minestom4fun"
version = "0.1.3"
description = "Python plugin API for Minestom4fun"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "websockets>=12.0",
]

[tool.hatch.build.targets.wheel]
packages = ["minestom4fun"]